objects/ASI_HK_CRM_Listed_Menu_Product__c.object
<CustomObject>
    <description>ASI HK CRM - Listed Menu Products - Used to capture which products are listed on an Outlet&apos;s Menu</description>
    <fields>
        <fullName>ASI_HK_CRM_C_Listing_Price__c</fullName>
        <label>Listing Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_C_Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_C_Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_C_Trade_Price_Normal__c</fullName>
        <label>Trade Price (Normal)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_C_Trade_Price_Pouring__c</fullName>
        <label>Trade Price (Pouring)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Outlet_Wholesaler__c</fullName>
        <label>Outlet / Wholesaler</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>List_Menu_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Product_SKU__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Product SKU</label>
        <referenceTo>ASI_MFM_SKU_Code__c</referenceTo>
        <relationshipLabel>Listed Menu Products</relationshipLabel>
        <relationshipName>List_Menu_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Remarks_PR_HK_Products__c</fullName>
        <label>Remarks (PR HK Products)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_SKU_Code_Product_Pack__c</fullName>
        <formula>ASI_HK_CRM_Product_SKU__r.ASI_HK_CRM_Product_Pack_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SKU Code (Product Pack)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Sub_brand__c</fullName>
        <formula>ASI_HK_CRM_Product_SKU__r.ASI_MFM_Sub_brand__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Trade_Price_Normal__c</fullName>
        <label>Trade Price (Normal)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Trade_Price_Pouring__c</fullName>
        <label>Trade Price (Pouring)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Listed Menu Product</label>
    <nameField>
        <displayFormat>LMP-{000000}</displayFormat>
        <label>Listed Menu Product Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Listed Menu Products</pluralLabel>
    <recordTypes>
        <fullName>Listed_Menu_Product_HK</fullName>
        <active>true</active>
        <label>Listed Menu Product (HK)</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>